hw4-helm/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw4-deployment
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: hw4-app
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hw4-app
    spec:
      containers:
        - name: hw4-app
          image: sden81/otus-ms-arch-2023-12-hw4-img:v1.0
          ports:
            - containerPort: 8081
