hw4-helm/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  hw4-service
spec:
  selector:
    app: hw4-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
